--- a/_posts/2025-04-18-150.md
+++ b/_posts/2025-04-18-150.md
@@ -36,7 +36,7 @@ newsletter: |
   ➡️ [Apple Podcasts]()
 
 
-  ➡️ [YouTube](https://youtu.be/EHx_KxRxwps)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=EHx_KxRxwps)
 
 
 
@@ -81,7 +81,62 @@ Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 Linki i ciekawe znaleziska:
 
-
+- [Nie dla mięczaków: Patoszkolenia, które zmieniają zasady gry! - Patoarchitekci](https://patoarchitekci.io/szkolenia/)
+- [GitHub - harvester/harvester: Open source hyperconverged infrastructure nullHCI) software](https://github.com/harvester/harvester)
+- [Red Hat OpenShift Virtualization](https://www.redhat.com/en/technologies/cloud-computing/openshift/virtualization)
+- [Proxmox - Powerful open-source server solutions](https://www.proxmox.com/en/)
+- [JFrog Artifactory - Universal Artifact Repository Manager](https://jfrog.com/artifactory/)
+- [Harbor](https://goharbor.io/)
+- [CloudNativePG - PostgreSQL Operator for Kubernetes](https://cloudnative-pg.io/)
+- [How to use Prometheus for anomaly detection in GitLab](https://about.gitlab.com/blog/anomaly-detection-using-prometheus/)
+- [GitHub - rabbitmq/cluster-operator: RabbitMQ Cluster Kubernetes Operator](https://github.com/rabbitmq/cluster-operator)
+- [Kubernetes Operator Options for Apache Kafka  ](https://portworx.com/blog/choosing-the-right-kubernetes-operator-for-apache-kafka/)
+- [Platform as a service - Wikipedia](https://en.wikipedia.org/wiki/Platform_as_a_service)
+- [Internal Developer Platform  ](https://internaldeveloperplatform.org/)
+- [Kubernetes](https://kubernetes.io/)
+- [OpenStack](https://www.openstack.org/)
+- [Kamal - Deploy web apps anywhere](https://kamal-deploy.org/)
+- [Ansible](https://www.ansible.com/)
+- [Microsoft Desired State Configuration overview - PowerShell  ](https://learn.microsoft.com/en-us/powershell/dsc/overview)
+- [How OpenID Connect Works - OpenID Foundation](https://openid.net/connect/)
+- [Active Directory Federation Services Overview  ](https://learn.microsoft.com/en-us/windows-server/identity/active-directory-federation-services)
+- [Keycloak](https://www.keycloak.org/)
+- [Dex](https://dexidp.io/)
+- [Lightweight Directory Access Protocol - Wikipedia](https://en.wikipedia.org/wiki/Lightweight_Directory_Access_Protocol)
+- [GitHub · Build and ship software on a single, collaborative platform · GitHub](https://github.com/)
+- [Jenkins](https://www.jenkins.io/)
+- [Gitlab](https://about.gitlab.com/)
+- [GitHub Actions · GitHub](https://github.com/features/actions)
+- [GitOps  ](https://www.gitops.tech/)
+- [Argo CD](https://argoproj.github.io/cd/)
+- [Flux](https://fluxcd.io/)
+- [Enterprise Kubernetes Management Platform &amp; Software  ](https://www.rancher.com/)
+- [Red Hat OpenShift enterprise application platform](https://www.redhat.com/en/technologies/cloud-computing/openshift)
+- [VMware Tanzu Platform   ](https://tanzu.vmware.com/)
+- [Harvester](https://harvesterhci.io/)
+- [Proxmox - Powerful open-source server solutions](https://www.proxmox.com/)
+- [Hyper-V Technology Overview  ](https://learn.microsoft.com/en-us/virtualization/hyper-v-on-windows/)
+- [Docker: Accelerated Container Application Development](https://www.docker.com/)
+- [PostgreSQL: The world's most advanced open source database](https://www.postgresql.org/)
+- [Microsoft SQL Server](https://www.microsoft.com/en-us/sql-server/)
+- [Database  ](https://www.oracle.com/database/)
+- [MongoDB: The World’s Leading Modern Database  ](https://www.mongodb.com/)
+- [Redis - The Real-time Data Platform](https://redis.io/)
+- [Elasticsearch: The Official Distributed Search &amp; Analytics Engine  ](https://www.elastic.co/elasticsearch/)
+- [Home - OpenSearch](https://opensearch.org/)
+- [Apache Cassandra  ](https://cassandra.apache.org/)
+- [Longhorn](https://longhorn.io/)
+- [Ceph.io — Home](https://ceph.io/en/)
+- [Persistent Kubernetes Storage &amp; Data Management  ](https://portworx.com/)
+- [MinIO  ](https://min.io/)
+- [S3](https://aws.amazon.com/s3/)
+- [OpenTelemetry](https://opentelemetry.io/)
+- [Grafana](https://grafana.com/)
+- [Loki](https://grafana.com/oss/loki/)
+- [Prometheus - Monitoring system &amp; time series database](https://prometheus.io/)
+- [RabbitMQ](https://www.rabbitmq.com/)
+- [Apache Kafka](https://kafka.apache.org/)
+- [Backstage](https://backstage.io/)
 
 ### Transkrypcja
 
