--- a/_posts/2025-04-18-150.md
+++ b/_posts/2025-04-18-150.md
@@ -6,7 +6,7 @@ description:
 episode: "150"
 tags: []
 spreaker: 65610776
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/architektura-on-premises-paas-open-source-jako-alternatywa/id1477067604?i=1000703961468&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -33,7 +33,7 @@ newsletter: |
   ➡️ [Spotify](https://open.spotify.com/episode/4IMVJkkQe84Kz17SO7HahA)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/architektura-on-premises-paas-open-source-jako-alternatywa/id1477067604?i=1000703961468&uo=4)
 
 
   ➡️ [YouTube](https://www.youtube.com/watch?v=EHx_KxRxwps)
