--- a/_posts/2025-04-18-150.md
+++ b/_posts/2025-04-18-150.md
@@ -19,6 +19,14 @@ newsletter: |
   
 
 
+  ### Patoszkolenia!
+  Szkolenia znajdziesz na <https://patoarchitekci.io/szkolenia/?promo={$promo_code}#oto-kursowe-patomenu>, a twoja zniżka to **{$promo\_discount}%** 😎
+  **Observability** od Szymona - **19-20 maja**
+  Naucz się, **jak monitorować systemy tak, by nie zbankrutować** – poznaj narzędzia, które są efektywne i nie zrujnują Twojego budżetu.
+  Szymon **pokieruje Cię przez labirynt narzędzi i technik,** które pomogą Ci zachować przejrzystość operacji bez obciążania zasobów. Dowiesz się, **jak implementować inteligentne systemy monitorujące,** które automatycznie adaptują się do zmieniających się warunków i potrzeb twojego środowiska IT.
+  **Architektura 101** od Łukasza - 4 spotkania po 4h: **13, 14, 20, 21 maja**
+  Rozpocznij swoją przygodę z architekturą IT od podstaw, ale na sterydach. Bez zbędnych teorii, tylko praktyczna wiedza z pierwszej ręki.
+  W tym szkoleniu Łukasz przekaże Ci nie tylko **fundamentalne zasady projektowania efektywnych systemów,** ale także pokaże, **jak teorie aplikować w codziennej pracy.** Odkryjesz, **jakie narzędzia i technologie są najbardziej efektywne w tworzeniu skalowalnych i bezpiecznych architektur IT.**
   
 
 
