--- a/_posts/2025-04-18-150.md
+++ b/_posts/2025-04-18-150.md
@@ -52,14 +52,14 @@ newsletter: |
   ## Short & Sweet
 
 
-  ### Szymon poleca: []()
+  ### Szymon poleca: [Ciekawe zadanie](https://ayende.com/blog/163394/new-interview-question)
 
-  
+  Na ten link trafiłem przypadkiem szukając serii artykułów o tym jak działa Write Ahead Log. Przeczytałem mimochodem i chodzi to za mną od jakiegoś czasu. Kto podejmie się wysłania nam swojego rozwiązania? :) 
 
 
-  ### Łukasz poleca: []()
+  ### Łukasz poleca: [Accelerating Large-Scale Test Migration with LLMs](https://medium.com/airbnb-engineering/accelerating-large-scale-test-migration-with-llms-9565c208023b)
 
-  
+  Dobry przykład jak LLM robi za juniora, w tym przypadku wymiana biblioteki do testów jedną na drugą w dużej skali (AirBnb). Polecam na zerknięcie na Retry Loops & Dynamic Prompting.
 
 
 
