--- a/_posts/2025-04-25-151.md
+++ b/_posts/2025-04-25-151.md
@@ -6,7 +6,7 @@ description:
 episode: "151"
 tags: []
 spreaker: 65699078
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/technology-radar-vol-32-review/id1477067604?i=1000704858492&uo=4
 newsletter: |
   Cześć! 👋 ✨
 
@@ -45,13 +45,13 @@ newsletter: |
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/151)
 
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/2zJ6FzaJV3NVTdyyhtJ53A)
 
 
-  ➡️ [Apple Podcasts]()
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/technology-radar-vol-32-review/id1477067604?i=1000704858492&uo=4)
 
 
-  ➡️ [YouTube](https://youtu.be/4PhyUdjE1WE)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=4PhyUdjE1WE)
 
 
 
